k8s/retailer-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retailer-deploy
  namespace: vkpaints-dev-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retailer-service
  template:
    metadata:
      labels:
        app: retailer-service
    spec:
      containers:
      - name: retailer-container
        image: shubha20/vk-paints_retailer-service:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
