k8s/retailer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailer-service
  namespace: vkpaints-dev-ns
spec:
  selector:
    app: retailer-service
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
