k8s/retailer-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retailer-route
  namespace: vkpaints-dev-ns
spec:
  parentRefs:
  - name: vk-paints-gateway
    namespace: vkpaints-gateway-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /retailers
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: retailer-service
      port: 80
