k8s/retailer-service/retailer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retailer-service
  namespace: vk-paints
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retailer-service
  template:
    metadata:
      labels:
        app: retailer-service
    spec:
      containers:
      - name: retailer-service
        image: retailer-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: retailer-service
  namespace: vk-paints
spec:
  selector:
    app: retailer-service
  ports:
  - port: 80
    targetPort: 3005
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retailer-service-route
  namespace: vk-paints
spec:
  parentRefs:
  - name: vk-paints-gateway
    namespace: vk-paints
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /retailers
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: retailer-service
      port: 80
